--- a/user_profile.html
+++ b/user_profile.html
@@ -22,6 +22,7 @@
         <div class="col-3">
           <header>
             <img
+              class="mt-3"
               src="./assets/avatars_and_logo/netflix_logo.png"
               alt=""
               width="140px"
@@ -33,10 +34,26 @@
             <div class="container">
               <h1 class="border-bottom border-secondary w-75">Edit Profile</h1>
               <div class="row">
-                <div class="col-xxl-3"></div>
-                <div class="col-xxl-3"></div>
-                <div class="col-xxl-3"></div>
-                <div class="col-xxl-3"></div>
+                <div class="col-xxl-12">
+                  <div class="row justify-content-start">
+                    <div class="col-2">
+                      <img
+                        src="./assets/avatars_and_logo/avatar.png"
+                        alt=""
+                        width="100%"
+                      />
+                    </div>
+                    <div class="col-xl-6">
+                      <p class="fs-2 bg-secondary ps-3">Strive Student</p>
+                      <form>
+                        <label for="language">Language:</label>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xxl-12"></div>
+                <div class="col-xxl-12"></div>
+                <div class="col-xxl-12"></div>
               </div>
             </div>
           </main>
