--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
                   />
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                  <li><a class="dropdown-item" href="#">View Profile</a></li>
+                  <li>
+                    <a class="dropdown-item" href="./user_profile.html"
+                      >View Profile</a
+                    >
+                  </li>
                   <li><a class="dropdown-item" href="#">Settings</a></li>
                 </ul>
               </li>
@@ -149,7 +153,7 @@
         </div>
       </div>
       <h2 class="fs-2 mt-4">Watch It Again</h2>
-      <div class="row gy-2 mt-3 gx-1">
+      <div class="row gy-2 gy-xl-1 mt-3 gx-2 gx-xl-1">
         <div class="col-md-6 col-lg-4 col-xxl-2">
           <img src="./assets/img/media7.webp" alt="" style="width: 100%" />
         </div>
@@ -170,7 +174,7 @@
         </div>
       </div>
       <h2 class="fs-2 mt-4">New Releases</h2>
-      <div class="row gy-2 mt-3 gx-1">
+      <div class="row gy-2 gy-xl-1 mt-3 gx-2 gx-xl-1">
         <div class="col-md-6 col-lg-4 col-xxl-2">
           <img src="./assets/img/media13.jpg" alt="" style="width: 100%" />
         </div>
