--- a/user_profile.html
+++ b/user_profile.html
@@ -14,6 +14,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body class="bg-dark">
@@ -32,29 +38,29 @@
           <div class="col-4"></div>
           <div class="col-8">
             <div class="container">
-              <h1 class="border-bottom border-secondary pb-2 w-75">
+              <h1 class="display-3 border-bottom border-secondary pb-1 h1-cw">
                 Edit Profile
               </h1>
             </div>
             <div class="container">
-              <div class="row">
-                <div class="col-2 pt-4">
+              <div class="row pb-4">
+                <div class="col-2 pt-3">
                   <img
                     src="./assets/avatars_and_logo/avatar.png"
                     alt=""
                     class="w-100"
                   />
                 </div>
-                <div class="col-6">
+                <div class="col-5">
                   <div
-                    class="container-fluid py-4 border-bottom border-secondary"
+                    class="container-fluid py-3 border-bottom border-secondary"
                   >
-                    <p class="ps-3 py-1 bg-secondary fs-2">Strive Student</p>
-                    <label class="d-block mt-4 fs-2 pb-4" for="languages"
+                    <p class="ps-3 py-1 bg-custom-light fs-4">Strive Student</p>
+                    <label class="d-block mt-4 fs-4 pb-1" for="languages"
                       >Language:</label
                     >
                     <select
-                      class="form-select br-none bg-black fs-5 fw-bold custom-width"
+                      class="form-select br-none bg-black fw-bold custom-width"
                       name="languages"
                       id="languages"
                     >
@@ -65,44 +71,49 @@
                     </select>
                   </div>
                   <div
-                    class="container-fluid border-bottom border-secondary pb-4 mb-5"
+                    class="container-fluid border-bottom border-secondary pb-4 mb-3"
                   >
-                    <p class="fs-2 mb-3 pt-4">Maturity Settings:</p>
-                    <p class="fs-4 px-2 py-1 bg-secondary mw-mc br-custom mb-3">
+                    <p class="fs-4 mb-3 pt-3">Maturity Settings:</p>
+                    <p class="fs-5 px-2 py-1 bg-dull mw-mc br-custom mb-3">
                       ALL MATURITY RATINGS
                     </p>
-                    <p class="fs-5">
+                    <p>
                       Show titles of
                       <span class="fw-bold">all maturity ratings</span> for this
                       profile.
                     </p>
                     <button
                       type="button"
-                      class="btn btn-outline-secondary mt-2 fs-4 px-4 py-1 br-none ls-custom"
+                      class="btn btn-outline-secondary mt-2 px-4 py-2 br-none ls-custom"
                     >
                       EDIT
                     </button>
                   </div>
                   <div class="container-fluid">
-                    <p class="fs-2">Autoplay controls</p>
-                    <div>
-                      <input type="checkbox" id="next-episode" />
-                      <label class="fs-5" for="next-episode"
-                        >Autoplay next episode in a series on all
-                        devices.</label
-                      >
+                    <p class="fs-4 mb-0">Autoplay controls</p>
+                    <div class="checkbox-container">
+                      <label class="fs-6" for="next-episode">
+                        Autoplay next episode in a series on all devices.
+                        <input
+                          class="checkbox"
+                          type="checkbox"
+                          id="next-episode"
+                        />
+                        <span class="checkmark border border-secondary"></span>
+                      </label>
                     </div>
-                    <div>
-                      <input type="checkbox" id="preview" />
-                      <label class="fs-5" for="preview"
-                        >Autoplay previews while browsing on all devices.</label
-                      >
+                    <div class="checkbox-container">
+                      <label class="fs-6" for="preview">
+                        Autoplay previews while browsing on all devices.
+                        <input class="checkbox" type="checkbox" id="preview" />
+                        <span class="checkmark border border-secondary"></span>
+                      </label>
                     </div>
                   </div>
                 </div>
               </div>
+              <div class="row border-bottom border-secondary h1-cw"></div>
             </div>
-            <div class="container"></div>
           </div>
         </div>
       </div>
