Last commit - complete

--- a/user_profile.html
+++ b/user_profile.html
@@ -24,7 +24,7 @@
   </head>
   <body class="bg-dark">
     <header>
-      <div class="container-fluid">
+      <div class="container-fluid pt-3">
         <img
           src="./assets/avatars_and_logo/netflix_logo.png"
           alt=""
@@ -38,7 +38,7 @@
           <div class="col-4"></div>
           <div class="col-8">
             <div class="container">
-              <h1 class="display-3 border-bottom border-secondary pb-1 h1-cw">
+              <h1 class="display-2 border-bottom border-secondary h1-cw">
                 Edit Profile
               </h1>
             </div>
@@ -112,7 +112,30 @@
                   </div>
                 </div>
               </div>
-              <div class="row border-bottom border-secondary h1-cw"></div>
+              <div class="border-top border-secondary h1-cw">
+                <a href="./index.html"
+                  ><button
+                    type="button"
+                    class="btn btn-outline-secondary fs-4 mt-4 me-3 px-5 py-1 br-none ls-custom1"
+                  >
+                    SAVE
+                  </button></a
+                >
+                <a href="./index.html"
+                  ><button
+                    type="button"
+                    class="btn btn-outline-secondary fs-4 mt-4 me-3 px-5 py-1 br-none ls-custom1"
+                  >
+                    CANCEL
+                  </button></a
+                >
+                <button
+                  type="button"
+                  class="btn btn-outline-secondary fs-4 mt-4 me-3 px-5 py-1 br-none ls-custom1"
+                >
+                  DELETE PROFILE
+                </button>
+              </div>
             </div>
           </div>
         </div>
