--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body class="bg-dark">
@@ -83,10 +89,12 @@
                 <ul class="dropdown-menu dropdown-menu-end">
                   <li>
                     <a class="dropdown-item" href="./user_profile.html"
-                      >View Profile</a
+                      >Edit Profile</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="#">Settings</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Streaming settings</a>
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -101,7 +109,7 @@
             <h1>TV Shows</h1>
             <div class="dropdown" data-bs-theme="dark">
               <button
-                class="btn btn-outline-light dropdown-toggle"
+                class="btn bg-black ls-custom br-none border-light dropdown-toggle"
                 type="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
